Use virtual threads for IO and other java 21 features